<resources>
    <string name="app_name">Math&amp;Eng&amp;Game</string>

    <string name="present_simple_u">Czasu Present Simple używamy: do opisywania czynności powtarzających się i zwyczajowych, opisywania prawd ogólnych i faktów, opisywania stałych, ciągłych czynności lub stanów.</string>

    <string name="present_simple_list">
        <li>Opisując rzeczy</li>\n\n
        <li>Opisywanie, streszczanie filmów</li>\n\n
        <li>Czynności dziejące się przez dłuższy czas</li>\n\n
        <li>Mówiąc o czynnościach powtarzających się</li>
    </string>

    <string name="okreslnik_czasu_present_simple">
        W Present Simple bardzo często używamy słówek określających częstotliwość wykonywania czynności:
    </string>

    <string name="present_continues_list">
        <li>czynności, które dzieją się w momencie mówienia o nich</li>\n\n
        <li>konkretne plany dotyczące przyszłości </li>\n\n
        <li>narzekanie na czyjeś przyzwyczajenia i zachowania</li>\n\n
        <li>czynności tymczasowe, które trwają przez pewien czas, ale niekoniecznie w tej chwili</li>
    </string>

    <string name="okreslnik_czasu_present_continues">
        W Present continues najczęściej wykorzystuje się określniki czasu takie jak":
    </string>

    <string name="past_simple_list">
        <li>Gdy mówimy o sytuacjach które miały miejsce w zdefiniowanej przeszłości</li>\n\n
        <li>Gdy pytamy kiedy coś się wydarzyło </li>\n\n
        <li>Gdy mówimy o sytuacjach, które wydarzyły się w przeszłości bez konieczności dokładniego jej określania</li>\n\n
        <li>Gdy mówimy o sytuacjach, które wydarzyły się w przeszłości i następowały krótko po sobie</li>\n\n
        <li>Gdy używamy okresów warunkowych</li>
    </string>
    <string name="okreslnik_czasu_past_simple">
        W past simple najczęściej wykorzystuje się określniki czasu takie jak":
    </string>
    <string name="okreslnik_czasu_present_perfect">
        W present perfect najczęściej wykorzystuje się określniki czasu takie jak":
    </string>
    <string name="okreslnik_czasu_future_simple">
        W future simple najczęściej wykorzystuje się określniki czasu takie jak":
    </string>
    <string name="okreslnik_czasu_past_continues">
        W past continues najczęściej wykorzystuje się określniki czasu takie jak":
    </string>

    <string name="past_simple_check">
        <li>Twierdzenie: SUBJECT + VERB (II form)</li>\n
        <li>Pytanie: DID + SUBJECT + VERB </li>\n
        <li>Przeczenie: SUBJECT + DIDN’T + VERB</li>\n
    </string>

    <string name="present_simple_check">
        <li>Twierdzenie: SUBJECT + VERB (3 os lp. dodajemy s na koncu)</li>\n
        <li>Pytanie: DO/DOES + SUBJECT + VERB </li>\n
        <li>Przeczenie: SUBJECT + DO/DOES + NOT + VERB</li>\n
    </string>
    <string name="present_continues_check">
        <li>Twierdzenie: SUBJECT + TO BE + VERB (- ING)</li>\n
        <li>Pytanie: TO BE + SUBJECT + VERB (- ING) </li>\n
        <li>Przeczenie: SUBJECT + TO BE + NOT + VERB (- ING)</li>\n
    </string>

    <string name="present_perfect_list">
        <li>czynności, która miała miejsce w przeszłości (nie określamy czasu, kiedy się wydarzyła)</li>\n\n
        <li>Opisując czynność/stan, która rozpoczęła się w przeszłości i trwa do tej pory. </li>\n\n
        <li>Mówiąc o niezakończonym jeszcze okresie czasu. </li>\n\n
        <li>Opisując doświadczenia i osiągnięcia osób żyjących.</li>\
    </string>
    <string name="present_perfect_check">
        <li>Twierdzenie: SUBJECT + HAVE/HAS + VERB (III form)</li>\n
        <li>Pytanie: HAVE/HAS + SUBJECT + VERB (III form) </li>\n
        <li>Przeczenie: SUBJECT + HAVE/HAS + NOT + VERB (III form)</li>\n
    </string>
    <string name="future_simple_list">
        <li>Mówiąc o spontanicznych decyzjach</li>\n\n
        <li>Opisując swoje przewidywania i przypuszczenia dotyczące przyszłości</li>\n\n
        <li>Wyrażając obietnice i groźby. </li>\n\n
        <li>Mówiąc o marzeniach i ogólnych planach na przyszłość</li>\n\n
        <li>Opisując czynności, które naszym zdaniem będą się powtarzać w przyszłości</li>
    </string>
    <string name="future_simple_check">
        <li>Twierdzenie: SUBJECT + WILL + VERB </li>\n
        <li>Pytanie: WILL + SUBJECT+ VERB</li>\n
        <li>Przeczenie: SUBJECT + WILL + NOT + VERB</li>\n
    </string>
    <string name="past_continues_list">
        <li>Mówiąc o czynności, która odbywała się w przeszłości w sposób ciągły</li>\n\n
        <li>Kiedy opisujemy czynność, która odbywała się w określonym momencie w przeszłości</li>\n\n
        <li>Gdy mówimy o przynajmniej dwóch czynnościach, które odbywały się w tym samym czasie w przeszłości. </li>\n\n
        <li>Kiedy mówimy, o jednej krótkiej czynności w przeszłości, która przerwała drugą, dłuższą. </li>\n\n
    </string>
    <string name="past_continues_check">
        <li>Twierdzenie: SUBJECT + WAS/WERE + VERB (- ING) </li>\n
        <li>Pytanie: WAS/WERE + SUBJECT+ VERB (- ING)</li>\n
        <li>Przeczenie: SUBJECT + WAS/WERE + NOT + VERB</li>\n
    </string>
    <string name="square_desc">
        Kwadrat to czworokąt formeny, którego wszystkie boki są równe oraz przekątne wewnątrz kwadratu przecinają się pod kątem prostym.
    </string>
    <string name="square_explanation">
        <li>A,B,C,D - wierzchołki kwadratu </li>\n
        <li>a - bok kwadratu</li>\n
        <li>d - przekątna kwadratu.</li>\n
    </string>
    <string name="rectangle_desc">
        Prostokąt to czworkąt, który posiada 2 pary przeciwległych boków o tej samej długości, przekąte wewnątrz prostokąta przecinają się pod kontem prostym.
    </string>
    <string name="rectangle_explanation">
        <li>A,B,C,D - wierzchołki prostokąta </li>\n
        <li>a,b - boki prostokąta</li>\n
        <li>d - przekątnych prostokąta.</li>\n
    </string>
    <string name="trapeze_desc">
        Trapez to czworokąt, w którym przynajmniej dwa boki są do siebie ustawione równolegle.
    </string>
    <string name="trapeze_explanation">
        <li>A,B,C,D - wierzchołki trapezu </li>\n
        <li>a,b - boki trapezu</li>\n
        <li>c,d - ramiona trapezu</li>\n
        <li>h - wysokość trapezu</li>\n
    </string>
    <string name="trai_desc">
        Trójkąt to wielokąt o trzech bokach, istnieje kilka rodzaji trójkątów między innymi: różnoboczny gdzie każdy bok ma inną długość, równoramienny posadający conajmniej dwa boki równe i równoboczny w którym wszystkie boki są równej długości.
    </string>
    <string name="trai_explanation">
        <li>równoramienny: obw = a + 2b</li>\n\n
        <li>równoboczny: obw =  3 \u2022 a</li>\n\n
        <li>róznoboczny: obw = a + b + c</li>\n
    </string>
    <string name="walec_explanation">
        <li>r - promień podstawy walca</li>\n\n
        <li>h - wysokość walca</li>\n\n
    </string>
    <string name="cube_desc">
        Sześcian jest prostopadłościanem, którego wszysteki ściany są identycznymi kwadratami
    </string>
    <string name="kul_desc">
        Kula powstaje przez obrót dowolnego koła wokół jego średnicy.
    </string>
    <string name="cubep_desc">
        Prostopadłościan jest granistosłupem, którego wszystkie sciany są prostokątami.
    </string>
    <string name="wal_desc">
        Walec jest wynikiem obrotu dowolnego prostokąta wokół prostej zawierającej jeden z jego boków.
    </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cube_explanation">
        <li>A,B,C,D,E,F,G,H - wierzchołki sześcianu</li>\n
        <li>a - krawędzie sześcianu</li>\n
        <li>d - przekątna sześcianu</li>\n
    </string>
    <string name="wal_explanation">
        <li>A,B,C,D,E,F,G,H - wierzchołki sześcianu</li>\n
        <li>a - krawędzie sześcianu</li>\n
        <li>d - przekątna sześcianu</li>\n
    </string>
    <string name="cubep_explanation">
        <li>A,B,C,D,E,F,G,H - wierzchołki prostopadłościanu</li>\n
        <li>a,b,c - krawędzie prostopadłościanu</li>\n
        <li>d - przekątna prostopadłościanu</li>\n
    </string>
    <string name="equ_desc">
        Równanie to dwa wyrażenia algebariczne połączone znakiem równości.
    </string>
    <string name="equ_desc_2">
        aby rozwiązać równanie trzeba znaleźć taką liczbę, która po podstawieniu do niewiadomej da po obu stronach równania taki sam wynik.
    </string>
    <string name="equ_r_1">
        Można zauważyć, że da się uprościć powyższe równanie po lewej stronie.
    </string>
    <string name="equ_r_2">
        następnie pozbądźmy się z lewej strony -5, aby to zrobić należy do obu stron dodać 5.
    </string>
    <string name="equ_r_3">
        Teraz przenieśmy 2x na prawą stronę aby pozbyć się x z lewej strony równania, można tego dokonać po przez odjęcie -2x z obu stron.
    </string>
    <string name="equ_r_4">
        Dzielimy obie strony przez 2 aby został sam x po prawej stronie równania.
    </string>
    <string name="equ_r_5">
       rozwiązanie równania: x=5
    </string>
    <string name="equk_r_1">
       Równanie kwadratowe w postaći ogólnej wygląda następująco:
    </string>
    <string name="equk_r_2">
      ax²+bx+c=0
    </string>
    <string name="equk_r_3">
      współczynniki a,b,c są liczbami i a ≠ 0.
    </string>
    <string name="equk_r_4">
     Aby rozwiązać takie równanie trzeba wyliczyć deltę(Δ) ze wzoru:
    </string>
    <string name="equk_r_5">
     Jeśli Δ > 0, oznacza to, że równanie ma dwa rozwiązania:
    </string>
    <string name="equk_r_6">
     Jeśli Δ = 0, oznacza to, że równanie ma jedno rozwiązania:
    </string>
    <string name="equk_r_7">
     Natomiast jeśli Δ \u003C 0 równianie nie ma rozwiązan.
    </string>
    <string name="equk_r_8">
     Na poczaku obliczmy deltę:
    </string>
    <string name="equk_r_9">
     Delta wyszłą dodatni, oznacza to, że równianie ma dwa rozwiązania.
    </string>
    <string name="equk_r_10">
     Obliczmy teraz x\u2081 i x\u2082
    </string>
    <string name="log_1">
     Logarytmowanie jest operacją odwrotną do potęgowania. Polega na obliczeniu wykładnika potęgi.
    </string>
    <string name="log_2">
     Taki zapis czytamy: Logarytm przy podstawie z a z liczby b.
    </string>
    <string name="log_3">
    Aby obliczyć logarytm, trzeba zgadnąć do, której potęgi musimy ponieść liczbę 3 aby otrzymac 27.
    </string>
    <string name="log_4">
        log₃27 = 3\n\n
        ponieważ\n\n
        3³= 3 \u2022 3 \u2022 3 = 27\n
    </string>
    <string name="log_5">
         a > 0\n\n
         a ≠ 1\n\n
         b > 0
    </string>
    <string name="fiszki">Fiszki</string>
    <string name="teoria">Teoria</string>
    <string name="quiz">Quiz</string>

</resources>